# richard-router

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: smactorio-task.yml
.github/workflows/: ci.yml
config/: router.example.yaml
docs/decisions/: 2026-07-08-config-provider-registry.md  2026-07-09-decision-log-boundary.md  2026-07-18-half-open-requires-2xx.md  2026-07-19-config-path-resolution.md  2026-07-19-status-latest-error-context.md  README.md  TEMPLATE-decision.md
docs/method/: DESIGN-RECORD.md  METHOD.md  PROJECT.md  README.md  sync-method.sh
docs/specs/: 2026-07-09-pool-member-visibility.md  2026-07-09-pool-visibility-metrics.md  2026-07-15-extract-failover-logic.md  2026-07-15-weighted-upstream-selection.md  2026-07-17-background-health-check.md  2026-07-20-decaying-health-check.md  2026-07-20-smactorio-ticket-entrypoint.md  README.md  (+2 more)
examples/: hermes-config.yaml  hermes-profile-setup.md
richard_router/: __init__.py  config.py  errors.py  main.py  metrics.py  redaction.py  service.py
scripts/: live_smoke.py
tests/: conftest.py  test_circuit_breaker.py  test_cli_validate.py  test_config.py  test_config_path_resolution.py  test_decision_log.py  test_errors.py  test_failover_refactor.py  test_health_check.py  test_main_config_errors.py  test_metrics.py  test_models_endpoint.py  test_pool_endpoint.py  test_pooling.py  test_redaction.py  test_repository_guidance.py  test_service_failover.py  test_upstream_selection.py
(+25 files in other folders)
