[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "richard-router"
version = "0.1.0"
description = "OpenAI-compatible virtual model router for Hermes Agent with upstream failover."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leon Breukelman" }]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
richard-router = "richard_router.main:cli"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
